maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:33: error: ':' expected but ')' found.
	def isDirectionFree(dir):dir = {
                               ^Escaper:59: error: identifier expected but '}' found.
} 
^